# eink-voice-agent

./: .clang-format  .gitignore  AGENTS.md  README.md
.github/workflows/: build.yml
.hermes/plugins/eink-voice-agent/: __init__.py  adapter.py  plugin.yaml  schemas.py  tools.py
.hermes/plugins/eink-voice-agent/dashboard/: manifest.json  plugin_api.py
.omo/plans/: sdcard-audio-storage.md
.opencode/: project.json
docs/: firmware-plan.md  hardware-details.md  hermes-api-design.md  project-overview.md  ui-design.md
firmware/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
firmware/main/: CMakeLists.txt  app_config.h  idf_component.yml  main.c
firmware/main/audio/: audio_pipeline.c  audio_pipeline.h  es8311.c  es8311.h  mic_driver.c  mic_driver.h  speaker_driver.c  speaker_driver.h  vad.c  vad.h  wake_word.c  wake_word.cpp  wake_word.h
firmware/main/display/: epaper_driver.c  epaper_driver.h  font_5x7.h  ui_manager.c  ui_manager.h
firmware/main/input/: buttons.c  buttons.h
firmware/main/models/: model_metadata.h  model_mfe.h  model_ops.h  tflite_learn_1037720_5.c  tflite_learn_1037720_5.h
firmware/main/modes/: mode_dashboard.c  mode_dashboard.h  mode_games.c  mode_games.h  mode_note.c  mode_note.h  mode_settings.c  mode_settings.h  mode_todo.c  mode_todo.h  mode_transcribe.c  mode_transcribe.h  mode_voice_agent.c  mode_voice_agent.h
firmware/main/network/: http_client.c  http_client.h  provisioning.c  provisioning.h  wifi_manager.c  wifi_manager.h  ws_client.c  ws_client.h
firmware/main/storage/: offline_notes.c  offline_notes.h  recordings.c  recordings.h  sdcard.c  sdcard.h
firmware/main/system/: power_mgmt.c  power_mgmt.h  system_init.c  system_init.h
firmware/main/ulp_vad/: ulp_vad.c  ulp_vad_shared.h
firmware/main/utils/: base64.c  base64.h  ringbuffer.c  ringbuffer.h
hardware/cad/: README.md  pinout.txt
hardware/case/: ESP32-C6-ePaper-1.54.kicad_pro  ESP32-C6-ePaper-1.54.sch  README.md  case.scad  case_body.stl  dimensions.dxf  library.lib
model-eon/model-parameters/: model_metadata.h  model_variables.h
model-eon/tflite-model/: tflite_learn_1037720_5_compiled.cpp  tflite_learn_1037720_5_compiled.h  trained_model_ops_define.h
model/model-parameters/: model_metadata.h  model_variables.h
model/tflite-model/: tflite-resolver.h  tflite_learn_1037720_5.h  tflite_learn_1037720_5.tflite  trained_model_ops_define.h
